--- a/configs/training/adaptive1DTokenzier/titok_bl32_vq.yaml
+++ b/configs/training/adaptive1DTokenzier/titok_bl32_vq.yaml
@@ -2,12 +2,12 @@ experiment:
     project: "tatitok_bl32_vq"
     name: "tatitok_bl32_vq_run1"
     output_dir: "tatitok_bl32_vq_run1"
-    max_train_examples: 685_800_000
-    save_every: 50_000
-    eval_every: 50_000
-    generate_every: 5_000
+    max_train_examples: 10_000
+    save_every: 5000
+    eval_every: 5000
+    generate_every: 500
     log_every: 50
-    log_grad_norm_every: 1_000
+    log_grad_norm_every: 100
     resume: True
 
 model:
@@ -15,7 +15,7 @@ model:
         use_prior_model: True
         quantize_mode: vq
         codebook_size: 8192
-        token_size: 64
+        token_size: 12
         use_l2_norm: False
         commitment_cost: 0.25
         clustering_vq: True
@@ -24,7 +24,7 @@ model:
         vit_dec_model_size: "large"
         vit_enc_patch_size: 16
         vit_dec_patch_size: 16
-        num_latent_tokens: 32
+        num_latent_tokens: 128
         finetune_decoder: False
         is_legacy: False
     prior_model:
@@ -41,7 +41,7 @@ model:
         prior_token_sampling_policy: "greedy"
 
 losses:
-    discriminator_start: 200_000
+    discriminator_start: 20_000
     quantizer_weight: 1.0
     discriminator_factor: 1.0
     discriminator_weight: 0.1
@@ -50,14 +50,12 @@ losses:
     reconstruction_loss: "l2"
     reconstruction_weight: 1.0
     lecam_regularization_weight: 0.001
-
+    loss_latent_ce_weight: 0.06
 dataset:
     params:
-        train_shards_path_or_url: "datacomp_sharded/train/datacomp-train-{000000..140089}.tar"
-        eval_shards_path_or_url: "imagenet_sharded/val/imagenet-val-{0000..0009}.tar"
+        train_shards_path_or_url: "ImageNet_wds/val/imagenet-val-{0000..0009}.tar"
+        eval_shards_path_or_url: "ImageNet_wds/val/imagenet-val-0010.tar"
         num_workers_per_gpu: 12
-        dataset_with_class_label: False
-        dataset_with_text_label: True
     preprocessing:
         resize_shorter_edge: 256
         crop_size: 256
@@ -73,22 +71,23 @@ optimizer:
         beta1: 0.9
         beta2: 0.999
         weight_decay: 1e-4
+        prior_lr_mult: 50.0 # prior ar model's lr multiplier
 
 lr_scheduler:
     scheduler: "cosine"
     params:
         learning_rate: ${optimizer.params.learning_rate}
-        warmup_steps: 10_000
+        warmup_steps: 1_000
         end_lr: 1e-5
 
 training:
     gradient_accumulation_steps: 1
-    per_gpu_batch_size: 32
-    mixed_precision: "fp16"
+    per_gpu_batch_size: 64
+    mixed_precision: "bf16"
     enable_tf32: True
     enable_wandb: True
     use_ema: True
     seed: 42
-    max_train_steps: 650_000
+    max_train_steps: 50_000
     num_generated_images: 2
     max_grad_norm: 1.0
