--- a/environment.yaml
+++ b/environment.yaml
@@ -1,271 +1,128 @@
 name: TiTok
 channels:
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main
   - defaults
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=5.1
-  - anaconda-anon-usage=0.5.0
-  - archspec=0.2.3
-  - boltons=23.0.0
-  - brotli-python=1.0.9
-  - bzip2=1.0.8
-  - c-ares=1.19.1
-  - ca-certificates=2024.11.26
-  - certifi=2024.8.30
-  - cffi=1.17.1
-  - charset-normalizer=3.3.2
-  - conda=24.11.1
-  - conda-anaconda-telemetry=0.2.0
-  - conda-content-trust=0.2.0
-  - conda-libmamba-solver=24.9.0
-  - conda-package-handling=2.4.0
-  - conda-package-streaming=0.11.0
-  - cryptography=43.0.3
-  - distro=1.9.0
-  - expat=2.6.4
-  - fmt=9.1.0
-  - frozendict=2.4.2
-  - icu=73.1
-  - idna=3.7
-  - jsonpatch=1.33
-  - jsonpointer=2.1
-  - krb5=1.20.1
+  - ca-certificates=2025.7.15
   - ld_impl_linux-64=2.40
-  - libarchive=3.7.4
-  - libcurl=8.9.1
-  - libedit=3.1.20230828
-  - libev=4.33
   - libffi=3.4.4
   - libgcc-ng=11.2.0
   - libgomp=11.2.0
-  - libmamba=1.5.11
-  - libmambapy=1.5.11
-  - libnghttp2=1.57.0
-  - libsolv=0.7.24
-  - libssh2=1.11.1
   - libstdcxx-ng=11.2.0
-  - libuuid=1.41.5
   - libxcb=1.17.0
-  - libxml2=2.13.5
-  - lz4-c=1.9.4
-  - menuinst=2.2.0
-  - ncurses=6.4
-  - openssl=3.0.15
-  - packaging=24.1
-  - pcre2=10.42
-  - platformdirs=3.10.0
-  - pluggy=1.5.0
+  - ncurses=6.5
+  - openssl=3.0.17
   - pthread-stubs=0.3
-  - pybind11-abi=5
-  - pycosat=0.6.6
-  - pycparser=2.21
-  - pyopenssl=25.0.0
-  - pysocks=1.7.1
-  - python=3.12.8
-  - readline=8.2
-  - reproc=14.2.4
-  - reproc-cpp=14.2.4
-  - requests=2.32.3
-  - ruamel.yaml=0.18.6
-  - ruamel.yaml.clib=0.2.8
-  - sqlite=3.45.3
-  - tk=8.6.14
-  - toolz=0.12.0
-  - tqdm=4.66.5
-  - truststore=0.8.0
-  - typing_extensions=4.12.2
-  - urllib3=2.2.3
-  - wheel=0.44.0
+  - python=3.9.18
+  - readline=8.3
+  - setuptools=78.1.1
+  - sqlite=3.50.2
+  - tk=8.6.15
+  - wheel=0.45.1
   - xorg-libx11=1.8.12
   - xorg-libxau=1.0.12
   - xorg-libxdmcp=1.1.5
   - xorg-xorgproto=2024.1
-  - xz=5.4.6
-  - yaml-cpp=0.8.0
+  - xz=5.6.4
   - zlib=1.2.13
-  - zstandard=0.23.0
-  - zstd=1.5.6
   - pip:
-      - absl-py==2.1.0
-      - accelerate==1.3.0
-      - aiohappyeyeballs==2.5.0
-      - aiohttp==3.11.13
-      - aiosignal==1.3.2
+      - accelerate==1.10.1
+      - aiohappyeyeballs==2.6.1
+      - aiohttp==3.12.15
+      - aiosignal==1.4.0
       - annotated-types==0.7.0
       - antlr4-python3-runtime==4.9.3
-      - asttokens==3.0.0
-      - astunparse==1.6.3
-      - attrs==25.1.0
-      - autocfg==0.0.8
-      - av==15.0.0
-      - beartype==0.20.0
-      - beautifulsoup4==4.13.3
+      - async-timeout==5.0.1
+      - attrs==25.3.0
+      - beautifulsoup4==4.13.5
       - braceexpand==0.1.7
-      - bs4==0.0.2
+      - certifi==2025.8.3
+      - charset-normalizer==3.4.3
       - click==8.1.8
-      - comm==0.2.2
-      - contourpy==1.3.1
-      - cycler==0.12.1
-      - dataclasses==0.6
-      - debugpy==1.8.14
-      - decorator==5.1.1
-      - decord==0.6.0
-      - diffusers==0.32.2
-      - docker-pycreds==0.4.0
+      - datasets==3.6.0
+      - diffusers==0.35.1
+      - dill==0.3.8
       - einops==0.8.1
-      - einx==0.3.0
-      - ema-pytorch==0.7.7
-      - executing==2.2.0
-      - fairscale==0.4.13
+      - eval-type-backport==0.2.2
       - filelock==3.13.1
-      - flatbuffers==25.2.10
-      - focal-frequency-loss==0.3.0
-      - fonttools==4.57.0
-      - frozenlist==1.5.0
-      - fsspec==2024.6.1
+      - frozenlist==1.7.0
+      - fsspec==2024.10.0
       - ftfy==6.3.1
-      - future==1.0.0
-      - fvcore==0.1.5.post20221221
-      - gast==0.6.0
       - gdown==5.2.0
       - gitdb==4.0.12
-      - gitpython==3.1.44
-      - gluoncv==0.10.5.post0
-      - google-pasta==0.2.0
-      - grpcio==1.70.0
-      - h5py==3.13.0
-      - hf-xet==1.1.10
-      - huggingface-hub==0.35.0
-      - hydra-core==1.3.2
-      - hyper-connections==0.1.15
-      - imageio==2.37.0
-      - imageio-ffmpeg==0.6.0
-      - imagenet-stubs==0.0.7
-      - importlib-metadata==8.6.1
-      - inquirerpy==0.3.4
+      - gitpython==3.1.45
+      - hf-xet==1.1.9
+      - huggingface-hub==0.34.4
+      - idna==3.10
+      - importlib-metadata==8.7.0
       - iopath==0.1.10
-      - ipykernel==6.29.5
-      - ipython==8.32.0
-      - jedi==0.19.2
-      - jinja2==3.1.4
-      - joblib==1.5.0
-      - jupyter-client==8.6.3
-      - jupyter-core==5.8.1
-      - keras==3.11.3
-      - kiwisolver==1.4.8
-      - lazy-loader==0.4
-      - libclang==18.1.1
-      - liger-kernel==0.6.2
-      - lightning-utilities==0.14.3
-      - linformer==0.2.3
-      - lmdb==1.6.2
-      - lpips==0.1.4
-      - markdown==3.7
-      - markdown-it-py==4.0.0
-      - markupsafe==2.1.5
-      - matplotlib==3.10.1
-      - matplotlib-inline==0.1.7
-      - mdurl==0.1.2
-      - ml-dtypes==0.5.3
+      - jinja2==3.1.6
+      - markupsafe==3.0.2
       - mpmath==1.3.0
-      - multidict==6.1.0
-      - mup==1.0.0
-      - namex==0.1.0
-      - natsort==8.4.0
-      - nest-asyncio==1.6.0
-      - networkx==3.3
-      - numpy==2.1.2
-      - nvidia-cublas-cu12==12.4.5.8
-      - nvidia-cuda-cupti-cu12==12.4.127
-      - nvidia-cuda-nvrtc-cu12==12.4.127
-      - nvidia-cuda-runtime-cu12==12.4.127
-      - nvidia-cudnn-cu12==9.3.0.75
-      - nvidia-cufft-cu12==11.2.1.3
-      - nvidia-curand-cu12==10.3.5.147
-      - nvidia-cusolver-cu12==11.6.1.9
-      - nvidia-cusparse-cu12==12.3.1.170
-      - nvidia-cusparselt-cu12==0.6.2
-      - nvidia-ml-py==12.575.51
-      - nvidia-nccl-cu12==2.21.5
-      - nvidia-nvjitlink-cu12==12.4.127
-      - nvidia-nvtx-cu12==12.4.127
-      - nvitop==1.5.1
+      - multidict==6.6.4
+      - multiprocess==0.70.16
+      - networkx==3.2.1
+      - numpy==2.0.2
+      - nvidia-cublas-cu12==12.8.4.1
+      - nvidia-cuda-cupti-cu12==12.8.90
+      - nvidia-cuda-nvrtc-cu12==12.8.93
+      - nvidia-cuda-runtime-cu12==12.8.90
+      - nvidia-cudnn-cu12==9.10.2.21
+      - nvidia-cufft-cu12==11.3.3.83
+      - nvidia-cufile-cu12==1.13.1.3
+      - nvidia-curand-cu12==10.3.9.90
+      - nvidia-cusolver-cu12==11.7.3.90
+      - nvidia-cusparse-cu12==12.5.8.93
+      - nvidia-cusparselt-cu12==0.7.1
+      - nvidia-nccl-cu12==2.27.3
+      - nvidia-nvjitlink-cu12==12.8.93
+      - nvidia-nvtx-cu12==12.8.90
       - omegaconf==2.3.0
-      - open-clip-torch==2.31.0
-      - opencv-python==4.11.0.86
-      - opt-einsum==3.4.0
-      - optree==0.17.0
-      - pandas==2.2.3
-      - parameterized==0.9.0
-      - parso==0.8.4
-      - peft==0.14.0
-      - pexpect==4.9.0
-      - pfzy==0.3.4
-      - pillow==11.0.0
-      - pip==25.2
-      - portalocker==3.1.1
-      - prompt-toolkit==3.0.50
-      - propcache==0.3.0
-      - protobuf==5.29.4
-      - psutil==6.1.1
-      - ptflops==0.7.4
-      - ptyprocess==0.7.0
-      - pure-eval==0.2.3
-      - pydantic==2.11.1
-      - pydantic-core==2.33.0
-      - pydeprecate==0.3.1
-      - pygments==2.19.1
-      - pyparsing==3.2.3
+      - open-clip-torch==3.1.0
+      - packaging==25.0
+      - pandas==2.3.2
+      - pillow==11.3.0
+      - pip==24.2
+      - platformdirs==4.4.0
+      - portalocker==3.2.0
+      - propcache==0.3.2
+      - protobuf==6.32.0
+      - psutil==7.0.0
+      - pyarrow==21.0.0
+      - pyarrow-hotfix==0.7
+      - pydantic==2.11.7
+      - pydantic-core==2.33.2
+      - pysocks==1.7.1
       - python-dateutil==2.9.0.post0
-      - pytorch-lightning==2.5.2
-      - pytorchvideo==0.1.5
-      - pytz==2025.1
-      - pywavelets==1.8.0
+      - pytz==2025.2
       - pyyaml==6.0.2
-      - pyzmq==27.0.0
-      - regex==2024.11.6
-      - rich==14.1.0
-      - safetensors==0.5.2
-      - scikit-image==0.25.2
-      - scikit-video==1.1.11
-      - scipy==1.15.1
-      - seaborn==0.13.2
-      - sentencepiece==0.2.0
-      - sentry-sdk==2.24.1
-      - setproctitle==1.3.5
-      - setuptools==80.9.0
+      - regex==2025.9.1
+      - requests==2.32.5
+      - safetensors==0.6.2
+      - scipy==1.13.1
+      - sentry-sdk==2.35.2
       - six==1.17.0
       - smmap==5.0.2
-      - soupsieve==2.6
-      - stack-data==0.6.3
-      - sympy==1.13.1
-      - tabulate==0.9.0
-      - tensorboard==2.20.0
-      - tensorboard-data-server==0.7.2
-      - tensorflow==2.20.0
-      - termcolor==3.0.0
-      - tifffile==2025.3.30
-      - timm==0.9.12
-      - tokenizers==0.21.0
-      - torch==2.6.0
+      - soupsieve==2.8
+      - sympy==1.14.0
+      - termcolor==3.1.0
+      - timm==1.0.19
+      - tokenizers==0.20.3
+      - torch==2.8.0
       - torch-fidelity==0.3.0
-      - torchdiffeq==0.2.5
       - torchinfo==1.8.0
-      - torchmetrics==1.6.2
-      - torchvision==0.21.0
-      - tornado==6.5.1
-      - traitlets==5.14.3
-      - transformers==4.48.2
-      - triton==3.2.0
-      - typing-inspection==0.4.0
-      - tzdata==2025.1
-      - wandb==0.19.8
+      - torchvision==0.23.0
+      - tqdm==4.67.1
+      - transformers==4.46.2
+      - triton==3.4.0
+      - typing-extensions==4.15.0
+      - typing-inspection==0.4.1
+      - tzdata==2025.2
+      - urllib3==2.5.0
+      - wandb==0.21.3
       - wcwidth==0.2.13
-      - webdataset==0.2.111
-      - werkzeug==3.1.3
-      - wrapt==1.17.3
-      - yacs==0.1.8
-      - yarl==1.18.3
-      - zipp==3.21.0
-prefix: /root/miniconda3/envs/TiTok3D
+      - webdataset==0.2.100
+      - xxhash==3.5.0
+      - yarl==1.20.1
+      - zipp==3.23.0
