--- a/configs/training/adaptive1DTokenzier/titok_bl128_vq_prior.yaml
+++ b/configs/training/adaptive1DTokenzier/titok_bl128_vq_prior.yaml
@@ -1,18 +1,18 @@
 experiment:
-    project: "tatitok_bl32_vq"
-    name: "tatitok_bl32_vq_run1"
-    output_dir: "tatitok_bl32_vq_run1"
-    max_train_examples: 1_281_164
-    save_every: 25_000
+    project: "titok_bl32_vq"
+    name: "titok_bl32_vq_run1"
+    output_dir: "titok_bl32_vq_run1"
+    max_train_examples: 1_281_167
+    save_every: 50_000
     eval_every: 25_000
-    generate_every: 500
+    generate_every: 1000
     log_every: 50
     log_grad_norm_every: 500
     resume: True
 
 model:
     vq_model:
-        use_prior_model: False
+        use_prior_model: True
         quantize_mode: vq
         codebook_size: 8192
         token_size: 12
@@ -41,7 +41,7 @@ model:
         prior_token_sampling_policy: "greedy"
 
 losses:
-    discriminator_start: 100_000
+    discriminator_start: 200_000
     quantizer_weight: 1.0
     discriminator_factor: 1.0
     discriminator_weight: 0.1
@@ -78,7 +78,7 @@ lr_scheduler:
     scheduler: "cosine"
     params:
         learning_rate: ${optimizer.params.learning_rate}
-        warmup_steps: 5_000
+        warmup_steps: 10_000
         end_lr: 1e-5
 
 training:
@@ -89,6 +89,6 @@ training:
     enable_wandb: True
     use_ema: True
     seed: 42
-    max_train_steps: 250_000
+    max_train_steps: 500_000
     num_generated_images: 2
     max_grad_norm: 1.0
