--- a/configs/training/adaptive1DTokenzier/titok_bl128_vq_noprior.yaml
+++ b/configs/training/adaptive1DTokenzier/titok_bl128_vq_noprior.yaml
@@ -1,18 +1,18 @@
 experiment:
-    project: "tatitok_bl32_vq"
-    name: "tatitok_bl32_vq_run1"
-    output_dir: "tatitok_bl32_vq_run1"
-    max_train_examples: 10_000
-    save_every: 5000
-    eval_every: 5000
-    generate_every: 500
+    project: "titok_bl32_vq"
+    name: "titok_bl32_vq_run1"
+    output_dir: "titok_bl32_vq_run1"
+    max_train_examples: 1_281_167
+    save_every: 50_000
+    eval_every: 25_000
+    generate_every: 1000
     log_every: 50
-    log_grad_norm_every: 100
+    log_grad_norm_every: 500
     resume: True
 
 model:
     vq_model:
-        use_prior_model: True
+        use_prior_model: False
         quantize_mode: vq
         codebook_size: 8192
         token_size: 12
@@ -28,7 +28,7 @@ model:
         finetune_decoder: False
         is_legacy: False
     prior_model:
-        prior_model_type: gptc-XXS
+        prior_model_type: gptc-S
         use_mix_ss: true
         mix_ss_max_ratio: 0.5
         mix_ss_peak_steps_ratio: 0.3
@@ -41,7 +41,7 @@ model:
         prior_token_sampling_policy: "greedy"
 
 losses:
-    discriminator_start: 20_000
+    discriminator_start: 200_000
     quantizer_weight: 1.0
     discriminator_factor: 1.0
     discriminator_weight: 0.1
@@ -50,13 +50,14 @@ losses:
     reconstruction_loss: "l2"
     reconstruction_weight: 1.0
     lecam_regularization_weight: 0.001
-    loss_latent_ce_weight: 0.01
-    disc_input_shift: False
+    loss_latent_ce_weight: 0.06
 dataset:
-    format: "wds"
+    format: "local"
     params:
-        train_shards_path_or_url: "ImageNet_wds/val/imagenet-val-{0000..0009}.tar"
-        eval_shards_path_or_url: "ImageNet_wds/val/imagenet-val-0010.tar"
+        train_dir: "ImageNet/data/train"
+        eval_dir: "ImageNet/data/val"
+        # train_shards_path_or_url: "ImageNet_wds/val/imagenet-val-{0000..0009}.tar"
+        # eval_shards_path_or_url: "ImageNet_wds/val/imagenet-val-0010.tar"
         num_workers_per_gpu: 12
     preprocessing:
         resize_shorter_edge: 256
@@ -77,7 +78,7 @@ lr_scheduler:
     scheduler: "cosine"
     params:
         learning_rate: ${optimizer.params.learning_rate}
-        warmup_steps: 1_000
+        warmup_steps: 10_000
         end_lr: 1e-5
 
 training:
@@ -88,6 +89,6 @@ training:
     enable_wandb: True
     use_ema: True
     seed: 42
-    max_train_steps: 50_000
+    max_train_steps: 500_000
     num_generated_images: 2
     max_grad_norm: 1.0
