--- a/configs/training/adaptive1DTokenzier/titok_bl128_vq_prior.yaml
+++ b/configs/training/adaptive1DTokenzier/titok_bl128_vq_prior.yaml
@@ -16,7 +16,7 @@ model:
         quantize_mode: vq
         codebook_size: 8192
         token_size: 12
-        use_l2_norm: False
+        use_l2_norm: True
         commitment_cost: 0.25
         clustering_vq: True
         # vit arch
@@ -86,7 +86,7 @@ training:
     per_gpu_batch_size: 64
     mixed_precision: "bf16"
     enable_tf32: True
-    enable_wandb: True
+    enable_wandb: False
     use_ema: True
     seed: 42
     max_train_steps: 500_000
